tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__DeepEarthHeating-AAAAAAAAAAAAAAAAAAAKzg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2766,
  "prerequisites": [
    1707
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the power of §cgeothermal energy§r, the Deep Earth Heating Pump can heat up Coolant or boil Distilled Water to create an energy source from the Earth's core.\n\nBy using a Heat Exchanger, you can convert the Hot Coolant into steam and use it in your turbines.\n\nAlternatively, you can make it output Superheated Steam directly, but only at 66% of the efficiency the hot coolant can achieve",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Deep Earth Heating Pump",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1707
  ],
  "rewards": [],
  "tasks": []
}
