tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__DoYouHearThatEng-AAAAAAAAAAAAAAAAAAAGzA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1740,
  "prerequisites": [
    860,
    1245,
    861
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your old and trusty combustion engines don't quite cut it anymore, not to mention they're polluting the place. If you want to keep burning liquids, you need to build a better engine. This multiblock can produce 1A of EV voltage by default and 3A if you supply it with oxygen. However, this power doesn't come for free - you need to supply the machine with small amounts of lubricant constantly (and oxygen if you want to boost both its efficiency and output).\n\nYou will also require 3 Input Hatches, a Muffler, and a Dynamo Hatch. Their tiers are up to you.\n\nCetane Boosted Diesel and High Octane Gasoline (HOG) are excellent fuel sources for this engine.\n\nYou will need to keep the area in front of the engine clear so it can pull enough air - not even torches.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lDo You Hear That Engine Revving?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    860,
    1245,
    861
  ],
  "rewards": [],
  "tasks": []
}
