tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__DoubleCompressed-AAAAAAAAAAAAAAAAAAAFOA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1336,
  "prerequisites": [
    1332,
    261
  ],
  "properties": {
    "auto_claim": false,
    "desc": "100EU/t for 64x1EU/t Solars? Sounds like a good deal. Get one of these. They can be Infused as well.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Double Compressed Solar",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1332,
    261
  ],
  "rewards": [],
  "tasks": []
}
