tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__EssentiaGenerato-AAAAAAAAAAAAAAAAAAAFPA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1340,
  "prerequisites": [
    1333
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When using magical plants to get Praecantatio Essentia, you'll end up with a couple dozen of Arbor Essentia jars. But no worries! This generator runs on Arbor! Awesome!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Essentia Generator: Arbor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1333
  ],
  "rewards": [],
  "tasks": []
}
